--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,27 @@
     <meta charset="utf-8" />
     <title>CTF-Lite</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        body {
+            margin: 0 0 50px 0;
+            font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
+        }
+
+        .capWidth {
+            margin: auto;
+            max-width: 900px;
+            padding: 0 10px;
+        }
+    </style>
 </head>
 
 <body>
