--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
         body {
             margin: 0 0 50px 0;
-            font-family: “Helvetica Neue”, Helvetica, Arial, sans-serif;
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         }
 
         .capWidth {
