leave login page after logging in

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
             if (event.origin === "https://ctfapi.devstuff.site") {
                 console.log(event.data);
                 localStorage.setItem('sessionToken', event.data);
+                window.location.assign('#');
                 window.location.reload(); // TODO: trigger profile check, dont reload
             }
         });
